--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,10 @@ aiobotocore = "^2.11.0"
 pydantic = "^2.6.0"
 python-multipart = "^0.0.9"
 gmqtt = "^0.6.11"
+sqlmodel = "^0.0.14"
+asyncpg = "^0.29.0"
+psycopg2-binary = "^2.9.9"
+aiosqlite = "^0.19.0"
 # uvloop is excluded for Windows compatibility
 
 [tool.poetry.group.dev.dependencies]
